COMP-7 Correct droptdown nav items back to no-wrap

--- a/custom/themes/composites_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/composites_lib_unb_ca/src/scss/style.scss
@@ -175,7 +175,8 @@ header {
       border-radius: .1rem;
       border: none;
 
-      & > a {
+      & a {
+        white-space: nowrap;
         color: $unb-halfgray;
       }
     }
